manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextjs
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    role: nextjs
